--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -178,7 +178,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis-ar ar-font">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis-ar ar-font heading1">
                                                             تصميم الاتصال المرئي</h3>
                                                     </div>
                                                 </div>
@@ -188,7 +188,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container">
                                                         <div
-                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion line3">
+                                                            class="gdlr-core-divider-line gdlr-core-skin-divider border-fashion line9">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft ar-font">
+                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft ar-font pdiv1">
                                                         <p class="ar-float">هو التخصص الذي يجمع بين التصميم
                                                             والتكنولوجيا، وهو الأداة التي
                                                             تُستخدم لنقل الأفكار الإبداعية من المُنتج إلى الجمهور
@@ -236,7 +236,7 @@
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
                                                 <h3
-                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar title5">
                                                     المقررات الدراسية
                                                 </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
@@ -250,7 +250,7 @@
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ">
                                                     <h3 class="gdlr-core-event-item-title titles-css h3-vis">
-                                                        <p class="font-css gdlr-core-column-20 ar-float ar-font">
+                                                        <p class="font-css gdlr-core-column-20 ar-float ar-font text5">
                                                             • الرسم للمصممين<br>
                                                             • الإبداع وحل المشكلات<br>
                                                             • مبادئ التصميم<br>
@@ -261,7 +261,7 @@
                                                             • التصوير الرقمي<br>
                                                         </p>
                                                         <p
-                                                            class="font-css gdlr-core-column-20 center-grid ar-float ar-font">
+                                                            class="font-css gdlr-core-column-20 center-grid ar-float ar-font text5 disp">
                                                             • أساسيات تخطيط الصفحة<br>
                                                             • الرسم التوضيحي الرقمي والتطبيقي<br>
                                                             • انتاج مطبوعات جرافيك<br>
@@ -273,7 +273,7 @@
                                                             • تصميم الهوية 2<br>
                                                         </p>
                                                         <p
-                                                            class="font-css gdlr-core-column-20-fund center-grid ar-float ar-font">
+                                                            class="font-css gdlr-core-column-20-fund center-grid ar-float ar-font text5 disp width1">
                                                             • طباعة متقدمة<br>
                                                             • مبادئ تصميم الويب<br>
                                                             • مبادئ تصميم الإعلانات<br>
@@ -306,7 +306,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
+                                                        <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5 theory-div2">
                                                             <div
                                                                 class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                                                 <div
@@ -316,7 +316,7 @@
                                                                             id="div_983a_26">
                                                                             <div
                                                                                 class="gdlr-core-title-item-title-wrap clearfix">
-                                                                                <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font "
+                                                                                <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font title5"
                                                                                     id="h3_983a_4">نـــظـــري</h3>
                                                                             </div>
                                                                         </div>
@@ -354,9 +354,9 @@
                                                         style="max-width: 1440px ;">
                                                         <div class="gdlr-core-pbf-element">
                                                             <h3
-                                                                class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-float ar-font ar-mrg">
+                                                                class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-float ar-font ar-mrg visualp">
                                                                 الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم
-                                                                أو البكالوريوس للاتصال المرئي:
+                                                                أو البكالوريوس للاتصال المرئي
                                                             </h3>
                                                         </div>
                                                     </div>
@@ -400,7 +400,7 @@
                         <div>
                             <div class="subscribe-box">
                                 <div class="inner wow fadeIn">
-                                    <h2>GET IN TOUCH WITH US NOW<br>
+                                    <h2 class="text3">GET IN TOUCH WITH US NOW<br>
                                         TO SEE HOW WE CAN HELP!
                                     </h2>
                                     <form id="contact" name="contact" action="" method="post">
