--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -206,7 +206,7 @@
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                                            الـحـيـاة فتي مـديـنـة الـريـاض</div>
+                                                            الـحـيـاة في مـديـنـة الـريـاض</div>
                                                     </li>
                                                     <li data-index="rs-6" data-transition="fade"
                                                         data-slotamount="default" data-hideafterloop="0"
