--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -192,17 +192,16 @@
                                                             width="1800" height="958" data-bgposition="center center"
                                                             data-bgfit="cover" data-bgrepeat="no-repeat"
                                                             class="rev-slidebg" data-no-retina>
-                                                        <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme width4"
+                                                        <div class="tp-caption tp-shape tp-shapewrapper riyad-slide2 tp-resizeme width4"
                                                             id="slide-6-layer-8" data-x="500" data-y="center"
                                                             data-voffset="-10" data-width="['400']" data-height="['80']"
                                                             data-type="shape" data-responsive_offset="on"
                                                             data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 6;background-color: white;"></div>
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"></div>
 
-                                                        <div class="tp-caption   tp-resizeme mrg21" id="slide-6-layer-3"
+                                                        <div class="tp-caption riyad-slide tp-resizeme mrg21" id="slide-6-layer-3"
                                                             data-x="570" data-y="center" data-voffset="-15"
                                                             data-width="['auto']" data-height="['auto']"
                                                             data-type="text" data-responsive_offset="on"
