--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -326,14 +326,7 @@
 
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
-                                                            <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption riyadh-text"
-                                                                style="font-size: 16px;
-                                                                font-weight: 400;
-                                                                font-style: normal;
-                                                                text-align: right;
-                                                                padding: 0px 98px;
-                                                                margin-top: -5px;
-                                                                color: black;">
+                                                            <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption riyad-sec riyadh-text">
                                                                 الرياض هي عاصمة المملكة العربية السعودية وأكبر مدنها،
                                                                 حيث يلتقي سحر العالم القديم برؤية القرن الحادي والعشرين،
                                                                 تعتبر الرياض كنز تاريخي وثقافي بدءاً من الكثبان الرملية
@@ -344,8 +337,7 @@
 
                                                             </div>
                                                             <br>
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title text2"
-                                                                style="text-transform: none ;word-spacing: 5px;color: black;">
+                                                            <h3 class="gdlr-core-column-service-title riyad-sec2 gdlr-core-skin-title text2">
                                                                 ينتظرك الكثير لاستكشافه في الرياض</h3>
                                                         </div>
                                                     </div>
