--- a/index-ar.html
+++ b/index-ar.html
@@ -190,9 +190,9 @@
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
                                                             data-no-retina>
 
-                                                        <div class="tp-caption tp-shape home-slider-ar2 tp-shapewrapper  tp-resizeme mrg1-ar"
-                                                            id="slide-6-layer-8" data-x="537" data-y="center"
-                                                            data-voffset="-10" data-width="['220']"
+                                                        <div class="tp-caption tp-shape mwidth1 tp-shapewrapper  tp-resizeme mrg1-ar"
+                                                            id="slide-6-layer-8" data-x="478" data-y="center"
+                                                            data-voffset="-10" data-width="['280']"
                                                             data-height="['100']" data-type="shape"
                                                             data-responsive_offset="on"
                                                             data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -202,8 +202,8 @@
                                                             style="z-index: 6;background-color: #EB8223;margin-left: 526px;">
                                                         </div>
 
-                                                        <div class="tp-caption home-slider-ar tp-resizeme mrg2-ar"
-                                                            id="slide-6-layer-3" data-x="570" data-y="center"
+                                                        <div class="tp-caption home-slider-ar tp-resizeme mrg2-ar title1"
+                                                            id="slide-6-layer-3" data-x="540" data-y="center"
                                                             data-voffset="-15" data-width="['auto']"
                                                             data-height="['auto']" data-type="text"
                                                             data-responsive_offset="on"
