--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -192,7 +192,7 @@
                                                             width="1800" height="958" data-bgposition="center center"
                                                             data-bgfit="cover" data-bgrepeat="no-repeat"
                                                             class="rev-slidebg" data-no-retina>
-                                                        <div class="tp-caption tp-shape tp-shapewrapper riyad-slide2 tp-resizeme width4"
+                                                        <div class="tp-caption tp-shape tp-shapewrapper riyad-slide2 tp-resizeme width4b"
                                                             id="slide-6-layer-8" data-x="500" data-y="center"
                                                             data-voffset="-10" data-width="['400']" data-height="['80']"
                                                             data-type="shape" data-responsive_offset="on"
@@ -201,7 +201,7 @@
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"></div>
 
-                                                        <div class="tp-caption riyad-slide tp-resizeme mrg21" id="slide-6-layer-3"
+                                                        <div class="tp-caption riyad-slide tp-resizeme mrg21 title1" id="slide-6-layer-3"
                                                             data-x="570" data-y="center" data-voffset="-15"
                                                             data-width="['auto']" data-height="['auto']"
                                                             data-type="text" data-responsive_offset="on"
@@ -211,7 +211,7 @@
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
                                                             الـحـيـاة في مـديـنـة الـريـاض</div>
                                                     </li>
-                                                    <li data-index="rs-6" data-transition="fade"
+                                                    <!-- <li data-index="rs-6" data-transition="fade"
                                                         data-slotamount="default" data-hideafterloop="0"
                                                         data-hideslideonmobile="off" data-easein="default"
                                                         data-easeout="default" data-masterspeed="300"
@@ -224,8 +224,8 @@
                                                             width="1800" height="958" data-bgposition="center center"
                                                             data-bgfit="cover" data-bgrepeat="no-repeat"
                                                             class="rev-slidebg" data-no-retina>
-                                                    </li>
-                                                    <li data-index="rs-6" data-transition="fade"
+                                                    </li> -->
+                                                    <!-- <li data-index="rs-6" data-transition="fade"
                                                         data-slotamount="default" data-hideafterloop="0"
                                                         data-hideslideonmobile="off" data-easein="default"
                                                         data-easeout="default" data-masterspeed="300"
@@ -238,7 +238,7 @@
                                                             width="1800" height="958" data-bgposition="center center"
                                                             data-bgfit="cover" data-bgrepeat="no-repeat"
                                                             class="rev-slidebg" data-no-retina>
-                                                    </li>
+                                                    </li> -->
 
 
                                                     <li data-index="rs-6" data-transition="fade"
@@ -451,23 +451,29 @@
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook">
+                                <a href="https://www.facebook.com/RafflesKSA/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="facebook">
                                     <i class="fa fa-facebook"></i>
                                 </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus">
-                                    <i class="fa fa-google-plus"></i>
+                                <a href="https://www.tiktok.com/@rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="tiktok">
+                                    <i class="fa fa-tiktok"><svg xmlns="http://www.w3.org/2000/svg" height="1.18rem"
+                                            class="tiktok" viewBox="0 0 448 512">
+                                            <path
+                                                d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" />
+                                        </svg></i>
                                 </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin">
-                                    <i class="fa fa-linkedin"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype">
-                                    <i class="fa fa-skype"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                                <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="instagram">
+                                <a href="https://www.instagram.com/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="instagram">
                                     <i class="fa fa-instagram"></i>
+                                </a>
+                                <a href="https://www.snapchat.com/add/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="snapchat">
+                                    <i class="fa fa-snapchat"></i>
+                                </a>
+                                <a href="https://twitter.com/rafflesksa/" target="_blank"
+                                    class="gdlr-core-social-network-icon" title="twitter">
+                                    <i class="fa fa-twitter"></i>
                                 </a>
                             </div>
                         </div>
