--- a/interior-design-ar.html
+++ b/interior-design-ar.html
@@ -178,8 +178,9 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css">
-                                                            Interior Design</h3>
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-font ar-mrg5 h3-css">
+                                                            التصميم الداخلي
+                                                        </h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -203,20 +204,16 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
-                                                        <p>Interior design is the art and science of enhance buildings
-                                                            from the inside,
-                                                            and increase their aesthetics. The study of interior design
-                                                            includes the design
-                                                            and planning of spaces and interior spaces, creative problem
-                                                            solving, knowledge
-                                                            of building materials and design history. It also plays the
-                                                            main and essential role
-                                                            in maintaining the integrity of the building. The interior
-                                                            design aspects consist
-                                                            of both technical aspects and planning aspects. This is in
-                                                            addition to the technical
-                                                            and aesthetic aspects.
+                                                        class="gdlr-core-text-box-item-content prg-width p-color ar-font mrg-lft">
+                                                        <p class="ar-float ar-space"> التصميم الداخلي هو الفن والعلم الذي يُعزِّز
+                                                            المباني من
+                                                            الداخل، ويزيد من الناحية الجمالية لهم.
+                                                            تشمل دراسة التصميم الداخلي، تصميم وتخطيط الفراغات والمساحات
+                                                            الداخلية وحل المشكلات الإبداعية والمعرفة بمواد البناء وتاريخ
+                                                            التصميم. كما أنه يلعب الدور الرئيسي والجوهري في الحفاظ على
+                                                            سلامة المبنى.
+                                                            تتألف جوانب التصميم الداخلي من جوانب تقنية، وجوانب تخطيطية.
+                                                            هذا بالإضافة إلى الجوانب الفنية والجمالية.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -237,8 +234,10 @@
                                         <div class="gdlr-core-block-item-title-wrap  gdlr-core-left-align gdlr-core-item-mglr"
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
-                                                <h3 class="gdlr-core-block-item-title titlestyle">
-                                                    MODULES</h3>
+                                                <h3
+                                                    class="gdlr-core-block-item-title titlestyle ar-float ar-font found-mrg-ar module-ar">
+                                                    المقررات الدراسية
+                                                </h3>
                                                 <div class="gdlr-core-block-item-title-divider">
                                                 </div>
                                             </div>
@@ -251,16 +250,16 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Creativity</a></h3>
-                                                    <p class="font-css">
-                                                        • Furniture History & Application <br>
-                                                        • Office Environmental Lighting<br>
-                                                        • Interior Color Application<br>
-                                                        • Industrial Attachment <br>
-                                                        • Presentation Drawing <br>
-                                                        • Free-hand Drawing <br>
-                                                        • Portfolio
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                        <a>الإِبـــداع</a>
+                                                    </h3>
+                                                    <p class="font-css ar-float ar-font">
+                                                        • تاريخ الأثاث والتطبيق<br>
+                                                        • الإضاءة البيئية Oce<br>
+                                                        • البحث اكاديمي و مهارات التواصل<br>
+                                                        • المطاعم والضيافة<br>
+                                                        • الميزانية والتكلفة<br>
+                                                        • مَلَفّ الهوية<br>
                                                     </p>
                                                 </div>
                                             </div>
@@ -271,13 +270,16 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Digital</a></h3>
-                                                    <p class="font-css">
-                                                        • Residential Building Technology & Construction <br>
-                                                        • 3D Computer -Aided -Drawing / REVIT <br>
-                                                        • Computer Rendering & Animation<br>
-                                                        • 2D Computer -Aided - Drawing
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                        <a>الـرقـمـي</a>
+                                                    </h3>
+                                                    <p class="font-css ar-float ar-font">
+                                                        • رسم ثنائي الأبعاد بالحاسوب<br>
+                                                        • الخامات والتشطيبات الداخلية<br>
+                                                        • رسم ثلاثي الأبعاد بالحاسوب<br>
+                                                        • التكنولوجيا والبناء <br>
+                                                        • البيع بالتجزئة<br>
+                                                        • دراسة الرسوم المتحركة
                                                     </p>
                                                 </div>
                                             </div>
@@ -288,17 +290,16 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Design</a></h3>
-                                                    <p class="font-css">
-                                                        • Furniture Designer Design Consultant <br>
-                                                        • Lighting Designer<br>
-                                                        • CAD Designer Facility Manager Design Educator<br>
-                                                        • Interior Design Principles & Theory<br>
-                                                        • Interior Materials & Finishes <br>
-                                                        • Computer Graphic Skills <br>
-                                                        • Restaurant & Hospitality <br>
-                                                        • Ret
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                        <a>الـتـصـمـيـم</a>
+                                                    </h3>
+                                                    <p class="font-css ar-float ar-font">
+                                                        • مبادئ التصميم الداخلي (نظري)<br>
+                                                        • الرسم اليدوي الحر<br>
+                                                        • الصياغة المعمارية<br>
+                                                        • تطبيق اللون الداخلي<br>
+                                                        • مهارات الجرافيك الحاسوبي<br>
+                                                        • الممارسة المهنية
                                                     </p>
                                                 </div>
                                             </div>
@@ -309,17 +310,16 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css">
-                                                        <a href="#">Theory</a>
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font" dir="rtl">
+                                                        <a>الـنـظـريـة</a>
                                                     </h3>
-                                                    <p class="font-css">
-                                                        • Communication Skills Budget, Costing
-                                                        & Documentation<br>
-                                                        • Practice Construction Studies Academic
-                                                        Research <br>
-                                                        • Professional Architectural Drafting <br>
-                                                        • Creativity & Concept Development <br>
-                                                        • Cultural studies
+                                                    <p class="font-css ar-float ar-font">
+                                                        • رسم العروض التقديمية<br>
+                                                        • دراسات ثقافية<br>
+                                                        • تطوير مفهوم الإبداع<br>
+                                                        • الممارسة المهنية<br>
+                                                        • دراسات البناء<br>
+                                                        • المرفق الصناعي
                                                     </p>
                                                 </div>
                                             </div>
@@ -335,55 +335,55 @@
                                                 style="max-width: 1440px ;">
                                                 <div class="gdlr-core-pbf-element">
                                                     <h3
-                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
-                                                        Career opportunities available after<br>
-                                                        completing the Interior Design Advanced Diploma
+                                                        class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css ar-font" dir="rtl">
+                                                        الفرص الوظيفية المتاحة بعد الانتهاء من الدبلوم المتقدم<br> أو
+                                                        البكالوريوس للتصميم الداخلي :
                                                     </h3>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="grid-container-intr">
+                                    <div class="grid-container2 ar-float">
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 1">
-                                            <p>Commercial Interior Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 1">
+                                            <p class="ar-font">خبيرة تصميم ببرنامج كاد</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p>Manager Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 2">
+                                            <p class="ar-font">اخصائية تصميم معارض </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 3">
-                                            <p>Residential Interior Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 3">
+                                            <p class="ar-font">اخصائية تصميم إضاءة </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 4">
-                                            <p>Exhibition Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 4">
+                                            <p class="ar-font"> خبيرة تصميم داخلي سكني</p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 5">
-                                            <p>Institutional Interior Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 5">
+                                            <p class="ar-font">خبيرة تصميم داخلي </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>CAD Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 6">
+                                            <p class="ar-font">اخصائية تصميم مفروشات </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Furniture Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 7">
+                                            <p class="ar-font">مديرة مرافق </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Educator</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 8">
+                                            <p class="ar-font">مستنشارة تصميم </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Design Consultant</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 9">
+                                            <p class="ar-font">مصلمة تصميم </p>
                                         </div>
                                         <div class="grid-item">
-                                            <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Lighting Facility Designer</p>
+                                            <img class="ar-mrg2" src="img/Bullets-01.png" alt="Icon 10">
+                                            <p class="ar-font">معلم تصميم</p>
                                         </div>
                                     </div>
 
